# rpi_quadrotor

./: .gitignore  README  rpi_quadrotor.tmproj  stack.xml
rpi_quadrotor_controlpanel/: mainpage.dox  manifest.xml
rpi_quadrotor_highlevel_fcu/: mainpage.dox  manifest.xml
rpi_quadrotor_onboard/: CMakeLists.txt  mainpage.dox  manifest.xml
rpi_quadrotor_onboard/driver_sparkfun6dof/: sparkfun6dof.cpp  sparkfun6dof.h
rpi_quadrotor_onboard/imu_reader/: imu_reader.cpp
rpi_quadrotor_onboard/msg/: imu_data.msg
rpi_quadrotor_onboard/src/: imu_reader.cpp
